@startuml
title Detail Class Order

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam defaultFontName "Times New Roman"
hide circle

class Order {
  - id: Int
  - userId: Int
  - status: Status
  - total: Float
  - midtransTransactionId: String
  - midtransOrderId: String
  - redirectUrl: String
  - reviewedBy: Int
  - reviewNotes: String
  - reviewedAt: DateTime
  - createdAt: DateTime
  - updatedAt: DateTime
  --
  + createOrder()
  + getUserOrders()
  + getOrderById()
  + approveOrder()
  + rejectOrder()
  + updateOrderStatus()
  + saveMidtransTransaction()
  + getPendingReviewOrders()
}

class OrderItem {
  - id: Int
  - orderId: Int
  - packageId: Int
}

class "«enumeration»\nStatus" as Status {
  PENDING_REVIEW
  REVIEW_APPROVED
  REVIEW_REJECTED
  SURVEY_SCHEDULED
  SURVEY_COMPLETED
  WAITING_FOR_ASSIGNMENT
  TECHNICIAN_ASSIGNED
  INSTALLATION_IN_PROGRESS
  COMPLETED
  CANCELLED
}

Order ..> Status
Order *-- OrderItem
OrderItem --> Package
Order --> User
@enduml
